--- a/calque.css
+++ b/calque.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background: rgb(148, 144, 144);
+    background:black;
     height: 100vh;
     display: flex;
     align-items: center;justify-content: center;
@@ -215,6 +215,16 @@ border-radius: 20px;
     background: #333;
     border-radius: 2rem;
 }
+.lumiere{
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    top: 80px;
+    margin: 10px;
+}
+
 .cred{
     position: absolute;
     bottom: 0;
